project(tests)

add_subdirectory(catch_main)
add_subdirectory(metaprogramming)
add_subdirectory(tuple_algorithms)
add_subdirectory(http_field_parser)
add_subdirectory(try_parse_field)
add_subdirectory(multipart_body)
add_subdirectory(default_constructed_settings)
add_subdirectory(ref_qualifiers_settings)
add_subdirectory(header)
add_subdirectory(buffers)
add_subdirectory(response_coordinator)
add_subdirectory(write_group_output_ctx)
add_subdirectory(uri_helpers)
add_subdirectory(start_stop)
add_subdirectory(router)
add_subdirectory(encoders)
add_subdirectory(from_string)
add_subdirectory(file_upload)
add_subdirectory(basic_auth)
add_subdirectory(bearer_auth)

if ( OPENSSL_FOUND )
endif ()
